# telepathy-acid

./: CMakeLists.txt  LICENSE  README.md
data/: acid.manager  acid.service.in
src/: CMakeLists.txt
